# audia

./: .editorconfig  .gitignore  CLAUDE.md  README.md
docs/: STATUS.md  audire-documento-implementacion.md
plugin/: CMakeLists.txt  README.md
plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/Source/Metrics/: KWeighting.cpp  KWeighting.h  LufsMeter.cpp  LufsMeter.h
plugin/Source/Net/: Protocol.cpp  Protocol.h  WebSocketClient.cpp  WebSocketClient.h
shared/: README.md
shared/protocol/: command.schema.json  envelope.schema.json  metrics.schema.json  register.schema.json
standalone/backend/: README.md  pyproject.toml
standalone/backend/packaging/: build_pyinstaller.py  entrypoint.py
standalone/backend/src/auma_backend/: __init__.py  __main__.py  app.py  config.py  schemas.py
standalone/backend/src/auma_backend/aggregation/: registry.py
standalone/backend/src/auma_backend/server/: frontend_ws.py  plugin_ws.py
standalone/electron/: README.md  index.html  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
standalone/electron/electron/: backend-launcher.ts  main.ts  preload.ts
standalone/electron/src/: App.tsx  types.ts
standalone/electron/src/hooks/: useBackendSocket.ts
