[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auma-backend"
version = "0.1.0"
description = "AudIA Mastering Assistant — backend sidecar (FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }
authors = [{ name = "AuMA project" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.5",
    "httpx>=0.27",
    "pytest>=8.0",
]

[project.scripts]
auma-backend = "auma_backend.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/auma_backend"]
