[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auma-backend"
version = "0.1.0"
description = "AudIA Mastering Assistant — backend sidecar (FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }
authors = [{ name = "AuMA project" }]
dependencies = [
    "fastapi>=0.110",
    # Plain uvicorn (no [standard] extras). uvloop hangs at import inside
    # PyInstaller --onefile bundles on macOS, and httptools/watchfiles are
    # unnecessary on loopback traffic. asyncio + h11 + websockets is enough.
    "uvicorn>=0.27",
    "h11>=0.14",
    "websockets>=12",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.5",
    "httpx>=0.27",
    "pytest>=8.0",
]

[project.scripts]
auma-backend = "auma_backend.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/auma_backend"]
